[package]
name = "terraformer"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

[[bin]]
name = "terraformer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "1.9"
futures = "0.3"
structopt = "0.3"
tokio = { version = "0.2", features = [ "full" ] }
